--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "motion": "^11.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hover-video-player": "^10.0.2",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1"
   },
