--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "portfolio_2025",
   "version": "0.1.0",
+  "engines": {
+    "node": "20.17.0"
+  },
   "private": true,
   "dependencies": {
     "bootstrap": "^5.3.3",
