--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "serve": "^14.2.4"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "dev": "react-scripts start",
     "test": "react-scripts test",
